pkg/terraform/terraform_parser.go
// Code generated from java-escape by ANTLR 4.11.1. DO NOT EDIT.

package terraform // Terraform
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type TerraformParser struct {
	*antlr.BaseParser
}

var terraformParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func terraformParserInit() {
	staticData := &terraformParserStaticData
	staticData.literalNames = []string{
		"", "'terraform'", "'resource'", "'data'", "'output'", "'locals'", "'module'",
		"'='", "'local'", "'var'", "'?'", "':'", "'for'", "'jsonencode'", "','",
		"'['", "']'", "'file'", "'+'", "'-'", "'/'", "'%'", "'>'", "'>='", "'<'",
		"'<='", "'=='", "'!='", "'&&'", "'||'", "'variable'", "'provider'",
		"'in'", "'*'", "'.'", "'{'", "'}'", "'('", "')'", "", "'nul'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "VARIABLE", "PROVIDER",
		"IN", "STAR", "DOT", "LCURL", "RCURL", "LPAREN", "RPAREN", "EOF_", "NULL_",
		"NATURAL_NUMBER", "BOOL", "DESCRIPTION", "MULTILINESTRING", "STRING",
		"IDENTIFIER", "COMMENT", "BLOCKCOMMENT", "WS",
	}
	staticData.ruleNames = []string{
		"file_", "terraform", "resource", "data", "provider", "output", "local",
		"module", "variable", "block", "blocktype", "resourcetype", "name",
		"label", "blockbody", "argument", "identifier", "identifierchain", "inline_index",
		"expression", "forloop", "section", "val", "functioncall", "functionname",
		"functionarguments", "index", "filedecl", "list_", "map_", "string",
		"signed_number", "operator_", "number",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// TerraformParserInit initializes any static state used to implement TerraformParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewTerraformParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func TerraformParserInit() {
	staticData := &terraformParserStaticData
	staticData.once.Do(terraformParserInit)
}

// NewTerraformParser produces a new parser instance for the optional input antlr.TokenStream.
func NewTerraformParser(input antlr.TokenStream) *TerraformParser {
	TerraformParserInit()
	this := new(TerraformParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &terraformParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "java-escape"

	return this
}

// TerraformParser tokens.
const (
	TerraformParserEOF             = antlr.TokenEOF
	TerraformParserT__0            = 1
	TerraformParserT__1            = 2
	TerraformParserT__2            = 3
	TerraformParserT__3            = 4
	TerraformParserT__4            = 5
	TerraformParserT__5            = 6
	TerraformParserT__6            = 7
	TerraformParserT__7            = 8
	TerraformParserT__8            = 9
	TerraformParserT__9            = 10
	TerraformParserT__10           = 11
	TerraformParserT__11           = 12
	TerraformParserT__12           = 13
	TerraformParserT__13           = 14
	TerraformParserT__14           = 15
	TerraformParserT__15           = 16
	TerraformParserT__16           = 17
	TerraformParserT__17           = 18
	TerraformParserT__18           = 19
	TerraformParserT__19           = 20
	TerraformParserT__20           = 21
	TerraformParserT__21           = 22
	TerraformParserT__22           = 23
	TerraformParserT__23           = 24
	TerraformParserT__24           = 25
	TerraformParserT__25           = 26
	TerraformParserT__26           = 27
	TerraformParserT__27           = 28
	TerraformParserT__28           = 29
	TerraformParserVARIABLE        = 30
	TerraformParserPROVIDER        = 31
	TerraformParserIN              = 32
	TerraformParserSTAR            = 33
	TerraformParserDOT             = 34
	TerraformParserLCURL           = 35
	TerraformParserRCURL           = 36
	TerraformParserLPAREN          = 37
	TerraformParserRPAREN          = 38
	TerraformParserEOF_            = 39
	TerraformParserNULL_           = 40
	TerraformParserNATURAL_NUMBER  = 41
	TerraformParserBOOL            = 42
	TerraformParserDESCRIPTION     = 43
	TerraformParserMULTILINESTRING = 44
	TerraformParserSTRING          = 45
	TerraformParserIDENTIFIER      = 46
	TerraformParserCOMMENT         = 47
	TerraformParserBLOCKCOMMENT    = 48
	TerraformParserWS              = 49
)

// TerraformParser rules.
const (
	TerraformParserRULE_file_             = 0
	TerraformParserRULE_terraform         = 1
	TerraformParserRULE_resource          = 2
	TerraformParserRULE_data              = 3
	TerraformParserRULE_provider          = 4
	TerraformParserRULE_output            = 5
	TerraformParserRULE_local             = 6
	TerraformParserRULE_module            = 7
	TerraformParserRULE_variable          = 8
	TerraformParserRULE_block             = 9
	TerraformParserRULE_blocktype         = 10
	TerraformParserRULE_resourcetype      = 11
	TerraformParserRULE_name              = 12
	TerraformParserRULE_label             = 13
	TerraformParserRULE_blockbody         = 14
	TerraformParserRULE_argument          = 15
	TerraformParserRULE_identifier        = 16
	TerraformParserRULE_identifierchain   = 17
	TerraformParserRULE_inline_index      = 18
	TerraformParserRULE_expression        = 19
	TerraformParserRULE_forloop           = 20
	TerraformParserRULE_section           = 21
	TerraformParserRULE_val               = 22
	TerraformParserRULE_functioncall      = 23
	TerraformParserRULE_functionname      = 24
	TerraformParserRULE_functionarguments = 25
	TerraformParserRULE_index             = 26
	TerraformParserRULE_filedecl          = 27
	TerraformParserRULE_list_             = 28
	TerraformParserRULE_map_              = 29
	TerraformParserRULE_string            = 30
	TerraformParserRULE_signed_number     = 31
	TerraformParserRULE_operator_         = 32
	TerraformParserRULE_number            = 33
)

// IFile_Context is an interface to support dynamic dispatch.
type IFile_Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFile_Context differentiates from other interfaces.
	IsFile_Context()
}

type File_Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFile_Context() *File_Context {
	var p = new(File_Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TerraformParserRULE_file_
	return p
}

func (*File_Context) IsFile_Context() {}

func NewFile_Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *File_Context {
	var p = new(File_Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TerraformParserRULE_file_

	return p
}

func (s *File_Context) GetParser() antlr.Parser { return s.parser }

func (s *File_Context) EOF() antlr.TerminalNode {
	return s.GetToken(TerraformParserEOF, 0)
}

func (s *File_Context) AllLocal() []ILocalContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ILocalContext); ok {
			len++
		}
	}

	tst := make([]ILocalContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ILocalContext); ok {
			tst[i] = t.(ILocalContext)
			i++
		}
	}

	return tst
}

func (s *File_Context) Local(i int) ILocalContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILocalContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILocalContext)
}

func (s *File_Context) AllModule() []IModuleContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IModuleContext); ok {
			len++
		}
	}

	tst := make([]IModuleContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IModuleContext); ok {
			tst[i] = t.(IModuleContext)
			i++
		}
	}

	return tst
}

func (s *File_Context) Module(i int) IModuleContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IModuleContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IModuleContext)
}

func (s *File_Context) AllOutput() []IOutputContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IOutputContext); ok {
			len++
		}
	}

	tst := make([]IOutputContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IOutputContext); ok {
			tst[i] = t.(IOutputContext)
			i++
		}
	}

	return tst
}

func (s *File_Context) Output(i int) IOutputContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOutputContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOutputContext)
}

func (s *File_Context) AllProvider() []IProviderContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IProviderContext); ok {
			len++
		}
	}

	tst := make([]IProviderContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IProviderContext); ok {
			tst[i] = t.(IProviderContext)
			i++
		}
	}

	return tst
}

func (s *File_Context) Provider(i int) IProviderContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IProviderContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IProviderContext)
}

func (s *File_Context) AllVariable() []IVariableContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IVariableContext); ok {
			len++
		}
	}

	tst := make([]IVariableContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IVariableContext); ok {
			tst[i] = t.(IVariableContext)
			i++
		}
	}

	return tst
}

func (s *File_Context) Variable(i int) IVariableContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariableContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariableContext)
}

func (s *File_Context) AllData() []IDataContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDataContext); ok {
			len++
		}
	}

	tst := make([]IDataContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDataContext); ok {
			tst[i] = t.(IDataContext)
			i++
		}
	}

	return tst
}

func (s *File_Context) Data(i int) IDataContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDataContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDataContext)
}

func (s *File_Context) AllResource() []IResourceContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IResourceContext); ok {
			len++
		}
	}

	tst := make([]IResourceContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IResourceContext); ok {
			tst[i] = t.(IResourceContext)
			i++
		}
	}

	return tst
}

func (s *File_Context) Resource(i int) IResourceContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IResourceContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IResourceContext)
}

func (s *File_Context) AllTerraform() []ITerraformContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITerraformContext); ok {
			len++
		}
	}

	tst := make([]ITerraformContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITerraformContext); ok {
			tst[i] = t.(ITerraformContext)
			i++
		}
	}

	return tst
}

func (s *File_Context) Terraform(i int) ITerraformContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITerraformContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITerraformContext)
}

func (s *File_Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *File_Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *File_Context) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TerraformListener); ok {
		listenerT.EnterFile_(s)
	}
}

func (s *File_Context) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TerraformListener); ok {
		listenerT.ExitFile_(s)
	}
}

func (p *TerraformParser) File_() (localctx IFile_Context) {
	this := p
	_ = this

	localctx = NewFile_Context(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TerraformParserRULE_file_)
	//nolint:varread // Generated by ANTLR
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(76)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&3221225598) != 0 {
		p.SetState(76)
		p.GetErrorHandler().Sync(p)

		switch p.GetTokenStream().LA(1) {
		case TerraformParserT__4:
			{
				p.SetState(68)
				p.Local()
			}

		case TerraformParserT__5:
			{
				p.SetState(69)
				p.Module()
			}

		case TerraformParserT__3:
			{
				p.SetState(70)
				p.Output()
			}

		case TerraformParserPROVIDER:
			{
				p.SetState(71)
				p.Provider()
			}

		case TerraformParserVARIABLE:
			{
				p.SetState(72)
				p.Variable()
			}

		case TerraformParserT__2:
			{
				p.SetState(73)
				p.Data()
			}

		case TerraformParserT__1:
			{
				p.SetState(74)
				p.Resource()
			}

		case TerraformParserT__0:
			{
				p.SetState(75)
				p.Terraform()
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(78)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(80)
		p.Match(TerraformParserEOF)
	}

	return localctx
}

// ITerraformContext is an interface to support dynamic dispatch.
type ITerraformContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTerraformContext differentiates from other interfaces.
	IsTerraformContext()
}

type TerraformContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTerraformContext() *TerraformContext {
	var p = new(TerraformContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TerraformParserRULE_terraform
	return p
}

func (*TerraformContext) IsTerraformContext() {}

func NewTerraformContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TerraformContext {
	var p = new(TerraformContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TerraformParserRULE_terraform

	return p
}

func (s *TerraformContext) GetParser() antlr.Parser { return s.parser }

func (s *TerraformContext) Blockbody() IBlockbodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockbodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockbodyContext)
}

func (s *TerraformContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TerraformContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TerraformContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TerraformListener); ok {
		listenerT.EnterTerraform(s)
	}
}

func (s *TerraformContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TerraformListener); ok {
		listenerT.ExitTerraform(s)
	}
}

func (p *TerraformParser) Terraform() (localctx ITerraformContext) {
	this := p
	_ = this

	localctx = NewTerraformContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TerraformParserRULE_terraform)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(82)
		p.Match(TerraformParserT__0)
	}
	{
		p.SetState(83)
		p.Blockbody()
	}

	return localctx
}

// IResourceContext is an interface to support dynamic dispatch.
type IResourceContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsResourceContext differentiates from other interfaces.
	IsResourceContext()
}

type ResourceContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyResourceContext() *ResourceContext {
	var p = new(ResourceContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TerraformParserRULE_resource
	return p
}

func (*ResourceContext) IsResourceContext() {}

func NewResourceContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ResourceContext {
	var p = new(ResourceContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TerraformParserRULE_resource

	return p
}

func (s *ResourceContext) GetParser() antlr.Parser { return s.parser }

func (s *ResourceContext) Resourcetype() IResourcetypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IResourcetypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IResourcetypeContext)
}

func (s *ResourceContext) Name() INameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INameContext)
}

func (s *ResourceContext) Blockbody() IBlockbodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockbodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockbodyContext)
}

func (s *ResourceContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ResourceContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ResourceContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TerraformListener); ok {
		listenerT.EnterResource(s)
	}
}

func (s *ResourceContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TerraformListener); ok {
		listenerT.ExitResource(s)
	}
}

func (p *TerraformParser) Resource() (localctx IResourceContext) {
	this := p
	_ = this

	localctx = NewResourceContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TerraformParserRULE_resource)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(85)
		p.Match(TerraformParserT__1)
	}
	{
		p.SetState(86)
		p.Resourcetype()
	}
	{
		p.SetState(87)
		p.Name()
	}
	{
		p.SetState(88)
		p.Blockbody()
	}

	return localctx
}

// IDataContext is an interface to support dynamic dispatch.
type IDataContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDataContext differentiates from other interfaces.
	IsDataContext()
}

type DataContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDataContext() *DataContext {
	var p = new(DataContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TerraformParserRULE_data
	return p
}

func (*DataContext) IsDataContext() {}

func NewDataContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DataContext {
	var p = new(DataContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TerraformParserRULE_data

	return p
}

func (s *DataContext) GetParser() antlr.Parser { return s.parser }

func (s *DataContext) Resourcetype() IResourcetypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IResourcetypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IResourcetypeContext)
}

func (s *DataContext) Name() INameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INameContext)
}

func (s *DataContext) Blockbody() IBlockbodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockbodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockbodyContext)
}

func (s *DataContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DataContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DataContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TerraformListener); ok {
		listenerT.EnterData(s)
	}
}

func (s *DataContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TerraformListener); ok {
		listenerT.ExitData(s)
	}
}

func (p *TerraformParser) Data() (localctx IDataContext) {
	this := p
	_ = this

	localctx = NewDataContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, TerraformParserRULE_data)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(90)
		p.Match(TerraformParserT__2)
	}
	{
		p.SetState(91)
		p.Resourcetype()
	}
	{
		p.SetState(92)
		p.Name()
	}
	{
		p.SetState(93)
		p.Blockbody()
	}

	return localctx
}

// IProviderContext is an interface to support dynamic dispatch.
type IProviderContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProviderContext differentiates from other interfaces.
	IsProviderContext()
}

type ProviderContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProviderContext() *ProviderContext {
	var p = new(ProviderContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TerraformParserRULE_provider
	return p
}

func (*ProviderContext) IsProviderContext() {}

func NewProviderContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProviderContext {
	var p = new(ProviderContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TerraformParserRULE_provider

	return p
}

func (s *ProviderContext) GetParser() antlr.Parser { return s.parser }

func (s *ProviderContext) PROVIDER() antlr.TerminalNode {
	return s.GetToken(TerraformParserPROVIDER, 0)
}

func (s *ProviderContext) Resourcetype() IResourcetypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IResourcetypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}
